<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/meeting_to_be_deleted" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:id="@+id/meeting_name"
        android:textAllCaps="true"
        android:text="@string/meeting_name" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:id="@+id/meeting_time"
        android:text=" jeudi 14/10/2021 10:30 à 11:15 durée 45 minutes"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:text="@string/meeting_users" />
    <TextView
        android:id="@+id/meeting_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:text="User1@lamzone.com, User2..." />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:text="@string/meeting_room" />
    <TextView
        android:id="@+id/meeting_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:text="Ile de France" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:orientation="horizontal" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/delete_ok"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:clickable="true"
        android:text="@string/ok" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/delete_cancel"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:clickable="true"
        android:text="@string/cancel"/>
    </LinearLayout>
</LinearLayout>