<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dip"
    android:id="@+id/dialog_content"
    tools:context=".controller.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/filter_meetings"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textAlignment="viewStart"
        android:text="@string/meeting_room" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/filter_room"
            android:layout_width="wrap_content"
            android:textIsSelectable="true"

            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:hint="@string/select_a_room" />

        <ImageView
            android:id="@+id/clear_room"
            android:layout_width="52dp"
            android:layout_height="52dp"
android:padding="18dp"
            android:clickable="true"
android:focusable="true"
            app:srcCompat="@drawable/ic_dialog_close_light" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:text="@string/meeting_date"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/filter_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:textAlignment="viewStart"
        android:focusableInTouchMode="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"

        android:hint="@string/select_a_day" />


    <CalendarView
        android:id="@+id/filter_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:visibility="visible">

        <TextView

            android:id="@+id/filter_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/ok" />

        <TextView
            android:id="@+id/filter_clear"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/clear" />

        <TextView
            android:id="@+id/filter_cancel"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/cancel" />
    </LinearLayout>


</LinearLayout>

