<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/new_meeting"
    android:isScrollContainer="true"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    android:paddingVertical="@dimen/activity_vertical_margin">

    <!-- objet de la réunion avec delete image -->

    <TextView
        android:id="@+id/mandatoryName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:minHeight="24sp"
        android:text="*"
        android:textAlignment="viewEnd"
        android:textColor="@color/design_default_color_error"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/meeting_name"
        app:layout_constraintTop_toTopOf="@id/meeting_name"
        />
    <EditText
        android:id="@+id/meeting_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:hint="@string/new_meeting_enter_name"
        android:background="@color/grey"
        android:inputType="text"
        android:singleLine="true"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toStartOf="@id/icons_guideline"
        app:layout_constraintStart_toEndOf="@id/mandatoryName"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/clear_meeting_name"
        android:layout_width="52dp"
        android:layout_height="52dp"


        android:clickable="true"
        android:contentDescription="@string/delete_cross"
        android:focusable="true"
        android:padding="14dp"
        app:layout_constraintBottom_toBottomOf="@id/meeting_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/icons_guideline"
        app:layout_constraintTop_toTopOf="@id/meeting_name"
        app:srcCompat="@drawable/ic_cancel_edition_black" />

    <!-- date de la réunion pour ouvrir calendrier -->
    <TextView
        android:id="@+id/date_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:text="@string/meeting_date"

        android:textAlignment="viewStart"
        app:layout_constraintTop_toBottomOf="@id/meeting_name"
        app:layout_constraintEnd_toStartOf="@id/labels_guideline"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/meeting_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:clickable="true"
        android:focusable="true"
android:background="@color/grey"
        android:maxLines="1"
        android:text=" jeudi 14/10/2021"
        android:textAlignment="viewStart"


        app:layout_constraintEnd_toStartOf="@id/icons_guideline"
        app:layout_constraintStart_toEndOf="@id/labels_guideline"
        app:layout_constraintBottom_toBottomOf="@id/date_label"
        app:layout_constraintTop_toTopOf="@id/date_label" />

    <ImageView
        android:id="@+id/reset_date"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:adjustViewBounds="false"
        android:clickable="true"
        android:contentDescription="@string/reset_date"
        android:focusable="true"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@id/meeting_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/icons_guideline"
        app:layout_constraintTop_toTopOf="@id/meeting_date"

        app:srcCompat="@drawable/reset" />

    <!-- heure de la réunion pour ouvrir le widget heure -->

    <TextView
        android:id="@+id/time_start_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:text="@string/meeting_start"

        android:textAlignment="viewStart"
        app:layout_constraintEnd_toStartOf="@id/labels_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_label" />

    <TextView
        android:id="@+id/meeting_start_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:clickable="true"
        android:focusable="true"
        android:background="@color/grey"
        android:text="10:30"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toStartOf="@id/icons_guideline"
        app:layout_constraintStart_toEndOf="@id/labels_guideline"
        app:layout_constraintTop_toTopOf="@id/time_start_label"
        app:layout_constraintBottom_toBottomOf="@id/time_start_label" />

    <ImageView
        android:id="@+id/reset_time"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:clickable="true"
        android:contentDescription="@string/reset_time"
        android:focusable="true"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@id/meeting_start_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/icons_guideline"
        app:layout_constraintTop_toTopOf="@id/meeting_start_time"
        app:srcCompat="@drawable/reset"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <!-- heure de FIN la réunion sans bouton  widget heure -->
    <TextView
        android:id="@+id/time_end_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:text="@string/meeting_end"

        android:textAlignment="viewStart"
        app:layout_constraintTop_toBottomOf="@id/time_start_label"
        app:layout_constraintEnd_toStartOf="@id/labels_guideline"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/meeting_end_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:minHeight="24sp"
        android:text="11:15"

        android:textAlignment="viewStart"

        app:layout_constraintEnd_toStartOf="@id/icons_guideline"
        app:layout_constraintStart_toEndOf="@id/labels_guideline"
        app:layout_constraintTop_toTopOf="@id/time_end_label"
         app:layout_constraintBottom_toBottomOf="@id/time_end_label"/>


    <TextView
        android:id="@+id/duration_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:text="@string/meeting_duration"

        android:textAlignment="viewStart"

        app:layout_constraintEnd_toStartOf="@id/labels_guideline"
        app:layout_constraintTop_toBottomOf="@id/time_end_label"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/meeting_duration"
        android:layout_width="50dp"
        android:layout_height="wrap_content"

        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:inputType="number"
        android:maxLength="4"
        android:text="45"
        android:background="@color/grey"
        android:textAlignment="viewStart"
        app:layout_constraintStart_toEndOf="@id/labels_guideline"
        app:layout_constraintTop_toTopOf="@id/duration_label"
        app:layout_constraintBottom_toBottomOf="@id/duration_label"/>

    <TextView
        android:id="@+id/duration_unit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:text="@string/units_mn"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:textAlignment="viewStart"
        app:layout_constraintTop_toTopOf="@id/duration_label"
        app:layout_constraintBottom_toBottomOf="@id/duration_label"
        app:layout_constraintStart_toEndOf="@id/meeting_duration" />


    <ImageView
        android:id="@+id/reset_duration"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:contentDescription="@string/delete_cross"
        android:focusable="true"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@id/meeting_duration"

        app:layout_constraintStart_toEndOf="@id/duration_unit"
        app:layout_constraintTop_toTopOf="@id/meeting_duration"
        app:srcCompat="@drawable/reset"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/room_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"

        android:text="@string/meeting_room"
        android:textAlignment="viewStart"

        app:layout_constraintEnd_toStartOf="@id/labels_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/duration_label" />

    <TextView
        android:id="@+id/mandatoryRoom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:minHeight="24sp"
        android:text="*"
        android:textAlignment="viewEnd"
        android:textColor="@color/design_default_color_error"

        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/room_label"
        app:layout_constraintBottom_toBottomOf="@id/room_label"
        app:layout_constraintTop_toTopOf="@id/room_label"
        />


    <Spinner
        android:id="@+id/meeting_room_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:background="@color/grey"


        android:hint="@string/select_a_room"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textAlignment="viewStart"
        android:textIsSelectable="true"

        app:layout_constraintEnd_toStartOf="@id/icons_guideline"
        app:layout_constraintStart_toEndOf="@id/labels_guideline"
        app:layout_constraintTop_toTopOf="@id/room_label"
        app:layout_constraintBottom_toBottomOf="@id/room_label" />


    <ImageView
        android:id="@+id/clear_room"
        android:layout_width="52dp"
        android:layout_height="52dp"

        android:clickable="true"
        android:focusable="true"
        android:padding="14dp"
        app:layout_constraintBottom_toBottomOf="@id/meeting_room_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/icons_guideline"

        app:layout_constraintTop_toTopOf="@id/meeting_room_spinner"
        app:srcCompat="@drawable/ic_cancel_edition_black" />


    <TextView
        android:id="@+id/users_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:text="@string/meeting_users"
        android:textAlignment="viewStart"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/room_label" />

    <TextView

        android:id="@+id/meeting_users"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxHeight="96sp"
        android:minHeight="24sp"
        android:background="@color/grey"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:isScrollContainer="true"
        android:scrollbars="vertical"
        android:textIsSelectable="true"
        android:textSize="16sp"
        android:text="@string/none_user"

        android:textAlignment="viewStart"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/users_label"
        tools:ignore="SpeakableTextPresentCheck" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/labels_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="100dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/icons_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="40dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
