<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_meetings"
    android:layout_width="match_parent"

    android:layout_height="?android:attr/listPreferredItemHeightLarge">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_text_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="68dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_text_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="64dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4"
        app:layout_constraintStart_toEndOf="@id/start_text_block" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <ImageView
        android:id="@+id/image_status"
        android:layout_width="47dp"
        android:layout_height="48dp"
        android:focusable="false"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"



        android:clickable="false"
        android:contentDescription="Icon"
        android:tooltipText="@string/meeting_room"
        app:srcCompat="@drawable/round_marker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <!--    android:background="@drawable/border" -->

    <TextView
        android:id="@+id/item_meeting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:ellipsize="end"

        android:maxLines="1"
        android:paddingTop="8sp"
        android:text="@string/meeting_name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="viewStart"
        app:layout_constraintStart_toEndOf="@id/start_text_block"
        app:layout_constraintBottom_toTopOf="@id/line"
        app:layout_constraintEnd_toStartOf="@id/start_date"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_time"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/item_meeting"
        android:layout_toEndOf="@id/item_meeting"

        android:maxLines="1"
        android:paddingTop="8sp"
        android:text="@string/meeting_start"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/line"
        app:layout_constraintStart_toEndOf="@id/start_date"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_room"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/item_meeting"

        android:clipToOutline="true"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:paddingTop="8sp"
        android:text="@string/meeting_room"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/line"
        app:layout_constraintEnd_toStartOf="@id/end_text_block"
        app:layout_constraintStart_toEndOf="@id/item_time"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/item_users"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:ellipsize="end"
        android:justificationMode="inter_word"
        android:maxWidth="280dp"
        android:maxLines="1"
        android:paddingBottom="10dp"
        android:text="Essais texte liste des utilisateurs et cela peut bien déborder"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/end_text_block"
        app:layout_constraintStart_toEndOf="@id/start_text_block"
        app:layout_constraintTop_toBottomOf="@id/line" />


    <ImageView
        android:id="@+id/image_remove"
        android:layout_width="48dp"
        android:layout_height="52dp"
        android:layout_alignParentStart="false"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:clickable="true"
        android:contentDescription="Icon"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_delete" />

</androidx.constraintlayout.widget.ConstraintLayout>

